# font

./: .gitignore  .npmignore  Cargo.toml  README.md  font.d.ts  package.json  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
lib/: font.js
scripts/: build.mjs  compile.mjs
src/: color.rs  font.rs  framebuffer.rs  layout.rs  lib.rs  structs.rs
src/ffi/: ffi.rs  io.rs  mem.rs  mod.rs  ptr.rs
tests/: font.mjs  layout.mjs
