[package]
name = "font"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
fontdue = '0.8.0'
image = { version = '0.23.14', default_features = false }
nanoserde = '0.1.29'
minivec = "0.4.0"

[dependencies.smallbox]
version = "0.8"
features = ["coerce"]
default-features = false

[profile.release]
lto = 'fat'
debug = false
opt-level = 3
panic = 'abort'
strip = 'symbols'
codegen-units = 1
overflow-checks = false