[package]
name = 'font'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = ['cdylib']

[dependencies]
fontdue = { version = '0.7.2', default-features = false }
nanoserde = { version = '0.1.29' }
minivec = '0.4.0'
smallbox = { version = '0.8', features = ['coerce'], default_features = false }

[profile.release]
lto = 'fat'
debug = false
opt-level = 3
panic = 'abort'
strip = 'symbols'
codegen-units = 1
overflow-checks = false